examples/test/testpolicy4677.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4677
  namespace: namespace35
spec:
  podSelector:
    matchLabels:
      key28: value18
      key22: value42
      key11: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value49
          key21: value25
          key36: value1
      podSelector:
        matchLabels:
          key46: value5
          key24: value24
          key37: value19
